--- a/testblog/app/views/posts/show.html.erb
+++ b/testblog/app/views/posts/show.html.erb
@@ -14,3 +14,6 @@
  <%= @post.updated_at %>
 </p>
 <%= link_to 'Back to posts', posts_path %>
+<h2> Comments: </h2>
+
+<%= link_to 'New Comment', new_comment_path %>
