[edit] new view of site [fix] fixed problems with adding posts

--- a/testblog/app/views/authors/show.html.erb
+++ b/testblog/app/views/authors/show.html.erb
@@ -1,13 +1,18 @@
-<h1>
-  <%= @author.fullname %>
-</h1>
-<p>
- Age:
- <%= @author.age %>
- <hr />
- Created:
- <%= @author.created_at %>
- Update:
- <%= @author.updated_at %>
-</p>
-<%= link_to 'Back to authors', authors_path %>
+<div class ="jumbotron">
+  <h1>
+    <%= @author.fullname %>
+  </h1>
+  <p>
+   Age:
+   <%= @author.age %>
+   <hr />
+   Author id:
+   <%= @author.id %>
+   <hr />
+   Created:
+   <%= @author.created_at %>
+   Update:
+   <%= @author.updated_at %>
+  </p>
+  <%= link_to 'Back to authors', authors_path, role: 'button', class: "btn btn-secondary" %>
+</div>
