--- a/testblog/app/views/home/welcome.html
+++ b/testblog/app/views/home/welcome.html
@@ -1,5 +1,7 @@
+<div class ="jumbotron">
 <h1>Welcome!</h1>
 <hr />
 <div>
-  <p> Przykładowy tekst</p>
+  <p> Nothing here... yet</p>
+</div>
 </div>
