--- a/testblog/app/views/layouts/partials/_flash.erb
+++ b/testblog/app/views/layouts/partials/_flash.erb
@@ -1,9 +1,13 @@
 <% if alert %>
-  Alert:
+  <div class="alert alert-danger" >
+    Alert:
   <%= alert %>
+</div>
 <% end %>
 
 <% if notice %>
-  Success:
+  <div class="alert alert-success">
+    Success:
   <%= notice %>
+</div>
 <% end %>
