--- a/testblog/app/views/posts/_form.erb
+++ b/testblog/app/views/posts/_form.erb
@@ -16,7 +16,7 @@
   <%= f.text_field :content %>
   <hr />
   <%= f.label :author_id %>
-  <%= f.text_field :author_id %>
+  <%= f.collection_select(:author_id, Author.all, :id, :fullname) %>
   <hr />
   <%= f.submit 'Save' %>
 <%  end %>
