--- a/testblog/app/views/posts/new.html.erb
+++ b/testblog/app/views/posts/new.html.erb
@@ -1,3 +1,5 @@
-<h1> Add new post</h1>
-
-<%= render 'form' %>
+<div class ="jumbotron">
+  <h1> Add new post</h1>
+  <hr />
+  <%= render 'form' %>
+</div>
