--- a/testblog/app/views/authors/edit.html.erb
+++ b/testblog/app/views/authors/edit.html.erb
@@ -1,3 +1,5 @@
-<h1>Edit author</h1>
-
-<%= render 'form' %>
+<div class ="jumbotron">
+  <h1>Edit author</h1>
+  <hr />
+  <%= render 'form' %>
+</div>
