--- a/testblog/app/views/authors/index.html.erb
+++ b/testblog/app/views/authors/index.html.erb
@@ -1,16 +1,28 @@
+<div class="jumbotron">
 <h1>List of all authors</h1>
 
-<ul>
 
-    <% @authors.each do |author| %>
-    <li>
-      <%= link_to author.fullname, author_path(id: author.id) %>
-      <%= link_to 'Edit', edit_author_path(id: author.id) %>
-      <%= link_to 'Delete', author_path(id: author.id), method: :delete, data: {confirm: 'Are you sure?'} %>
-    </li>
-    <% end %>
+<img style="display: none;" src ="https://i.redd.it/ounq1mw5kdxy.gif" />
+
+    <div class = 'authors'>
+      <% @authors.each do |author| %>
+        <%= render 'author', author: author %>
+      <% end %>
+    </div>
 
     <hr />
-    <%= link_to 'New Author', new_author_path %>
-
+    <p> Add new author </p>
+    <%= form_for @author, remote: true, html: {class: 'new-author'} do |f| %>
+      <%= f.label :name %>
+      <%= f.text_field :name %>
+      <hr />
+      <%= f.label :surname %>
+      <%= f.text_field :surname %>
+      <hr />
+      <%= f.label :age %>
+      <%= f.number_field :age %>
+      <hr />
+      <%= f.submit 'Save' %>
+    <%  end %>
 </ul>
+</div>
