--- a/testblog/app/views/layouts/partials/_navbar.erb
+++ b/testblog/app/views/layouts/partials/_navbar.erb
@@ -1,8 +1,30 @@
-<div>
-  <%= link_to 'Home', root_path %>
-  <%= link_to 'Posts', posts_path %>
-  <%= link_to 'Authors', authors_path %>
+<nav  class="navbar navbar-expand-lg navbar-light" style="background-color: #e9ecef;">
+  <%= link_to root_path do  %>
+    <%= image_tag 'home.png',  { style: 'max-height: 2em;'} %>
+    <!-- <img src="home.jpeg" width="30" height="30"> -->
+  <% end %>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
 
-
-
-</div>
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <!-- <li class="nav-item active">
+        <a class="nav-link" href=<% link_to root_path %> >Home <span class="sr-only">(current)</span></a>
+      </li> -->
+      <li class="nav-item">
+        <%= link_to 'Home', root_path, { class: 'nav-link' } %>
+      </li>
+      <li class="nav-item">
+        <%= link_to 'Posts', posts_path, { class: 'nav-link' } %>
+      </li>
+      <li class="nav-item">
+        <%= link_to 'Authors', authors_path, { class: 'nav-link' } %>
+      </li>
+    </ul>
+    <!-- <form class="form-inline my-2 my-lg-0">
+      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+    </form> -->
+  </div>
+</nav>
