--- a/testblog/app/views/posts/show.html.erb
+++ b/testblog/app/views/posts/show.html.erb
@@ -1,19 +1,18 @@
-<h1>
-  <%= @post.title %>
-</h1>
-<p>
- Content:
- <%= @post.content %>
- <hr />
- Author:
- <%= @post.author_id %>
- <hr />
- Created:
- <%= @post.created_at %>
- Update:
- <%= @post.updated_at %>
-</p>
-<%= link_to 'Back to posts', posts_path %>
-<h2> Comments: </h2>
-
-<%= link_to 'New Comment', new_comment_path %>
+<div class ="jumbotron">
+  <h1>
+    <%= @post.title %>
+  </h1>
+  <p>
+   Content:
+   <%= @post.content %>
+   <hr />
+   Author:
+   <%= @post.author_id %>
+   <hr />
+   Created:
+   <%= @post.created_at %>
+   Update:
+   <%= @post.updated_at %>
+  </p>
+  <%= link_to 'Back to posts', posts_path, role: 'button', class: "btn btn-secondary" %>
+</div>
